# unicode-bidi-py

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
unicode_bidi_py/: __init__.py  unicode_bidi_py.pyi
