[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "unicode-bidi-py"
requires-python = ">=3.7"
version = "0.1.0"
authors = [
    { name = "Kurbanov Bulat", email = "kurbanovbul@gmail.com" },
]
license-files.paths = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
